# bin-packing-simulator

./: pyproject.toml
src/: main.py  solver.py
